--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
 		<title>Personal Website</title>  <!-- Update to unique and accurate page title -->
 		<meta name="description=" content="Personal website"> <!-- Give summary of the website -->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	</head>
 
 	<body>
-		<header>
-			<div class="logo-container">
-				<h1>August Rising</h1>
-			</div>
-		</header>
 		<section class="main-section">
 			<div class="jumbotron">
+				<header>
+					<div class="logo-container">
+						<h1>August Rising</h1>
+					</div>
+				</header>
 				<div class="jumbo-left">
 					<h1>Professional</h1>
 
