--- a/index.html
+++ b/index.html
@@ -10,32 +10,35 @@
 
 	<body>
 		<section class="main-section">
+			<header>
+				<div class="logo-container">
+					<h1>August Rising</h1>
+				</div>
+			</header>
 			<div class="jumbotron">
-				<header>
-					<div class="logo-container">
-						<h1>August Rising</h1>
+				<div class="jumbo-child">
+					<div class="jumbo-left">
+						<h1>Professional</h1>
+
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu non diam phasellus vestibulum lorem. </p>
+
+						<button type="button" name="btn">Explore</button>
 					</div>
-				</header>
-				<div class="jumbo-left">
-					<h1>Professional</h1>
+					<div class="jumbo-right">
+						<h1>Professional</h1>				
 
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu non diam phasellus vestibulum lorem. </p>
 
-					<button type="button" name="btn">Explore</button>
+						<button type="button" name="btn">Explore</button>
+					</div>
+					<div class="clear-both"></div>
 				</div>
-				<div class="jumbo-right">
-					<h1>Professional</h1>				
-
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-					<button type="button" name="btn">Explore</button>
+				<div class="arrow-container">
+					<div class="arrow">
+						<i class="fas fa-angle-double-down"></i>
+					</div>
 				</div>
-			</div>
 
-			<div class="arrow-container">
-				<div class="arrow">
-					<i class="fas fa-angle-double-down"></i>
-				</div>
 			</div>
 		</section>
 		<section class="about-section">
