Added more stylings

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				</div>
 				<div class="arrow-container flex-container">
 					<div class="arrow bounce">
-						<i class="fas fa-angle-double-down"></i>
+						<a href="#scrollTo"><i class="fas fa-angle-double-down"></i></a>
 					</div>
 				</div>
 			</div>
