Restyled certain parts of CSS

--- a/index.html
+++ b/index.html
@@ -17,16 +17,18 @@
 			<div class="home-container flex-parent">
 				<div class="logo-container flex-container">
 					<h1>August Rising</h1>
+					<hr class="hidden">
 				</div>
+				
 				<div class="jumbotron flex-container">
 					<div class="jumbo-child flex-parent">
 						<div class="flex-container">
-							<h1>Professional</h1>
+							<h1>Words Don't Write Themselves</h1>
 
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu non diam phasellus vestibulum lorem. </p>
 
-							<button type="button" name="btn">Explore</button>
-							<button type="button" name="btn">Explore</button>
+							<button type="button" name="btn">Read my work</button>
+							<button type="button" name="btn">Explore my ideas</button>
 						</div>
 					</div>
 				</div>
@@ -81,6 +83,9 @@
 			</div>
 		</section>
 		<section class="footer-section">
+
+			<hr class="hidden">
+			
 			<footer>
 				<p>Copyright © 2019 • Designed and Developed by SHARF</p>
 				<div class="icons-container">
