--- a/index.html
+++ b/index.html
@@ -49,14 +49,16 @@
 				</div>
 			</div>
 		</section>
-		<section class="about-section flex-parent" id="scrollToAbout">
-			<div class="flex-container about-container flex-parent">
-				<div class="image-container flex-container">
-					<img src="assets/images/pexels-photo-1310522.jpeg" /> <!-- Must be square -->
-				</div>
+		<section class="about-section" id="scrollToAbout">
+			<div class="flex-parent about-container">
 				<div class="flex-container">
+					<div class="image-container">
+						<img src="assets/images/pexels-photo-1310522.jpeg" /> <!-- Must be square -->
+					</div>
+				</div>
+				<div class="flex-container summary-container">
 					<header>
-					<h1>Inside August Rising</h1>
+						<h1>Inside August Rising</h1>
 					</header>
 
 					<p class="about-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -149,19 +151,20 @@
 			</div>
 		</section>
 		<section class="footer-section">
-
 			<hr class="hidden">
 			
-			<footer class="flex-parent">
-				<p>Copyright © 2019 • Designed and Developed by SHARF</p>
-				<div class="icons-container flex-container flex-parent">
-					<p>Connect with me: </p>
-					<a href="#"><i class="fas fa-envelope" aria-hidden="true"></i></a>
-					<a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a>
-					<a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a>
-					<a href="#"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
-				</div>
-			</footer>
+			<div class="footer-container">
+				<footer class="flex-parent">
+					<p>Copyright © 2019 • Designed and Developed by SHARF</p>
+					<div class="icons-container flex-container flex-parent">
+						<p>Connect with me: </p>
+						<a href="#"><i class="fas fa-envelope" aria-hidden="true"></i></a>
+						<a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+						<a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a>
+						<a href="#"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+					</div>
+				</footer>	
+			</div>
 		</section>
 		
 	</body>
