--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
 				</header>
 				<div class="flex-parent">
 					<div class="flex-container card-container">
-						<div class="blog-card">
-							<div class="image-container">
+						<div class="blog-card flex-parent">
+							<div class="image-container flex-container">
 								<img src="assets/images/activity-autumn-blond-1374545.jpg">
 							</div>
-							<div class="blog-content">
+							<div class="blog-content flex-container">
 								<h1>Title of the Blog Post</h1>
 								<p>created by August Rising<br>Jan/05/2019</p>
 
@@ -87,11 +87,11 @@
 						</div>
 					</div>
 					<div class="flex-container card-container">
-						<div class="blog-card">
-							<div class="image-container">
+						<div class="blog-card flex-parent">
+							<div class="image-container flex-container">
 								<img src="assets/images/activity-autumn-blond-1374545.jpg">
 							</div>
-							<div class="blog-content">
+							<div class="blog-content flex-container">
 								<h1>Title of the Blog Post</h1>
 								<p>created by August Rising<br>Jan/05/2019</p>
 
@@ -102,11 +102,11 @@
 						</div>
 					</div>
 					<div class="flex-container card-container">
-						<div class="blog-card">
-							<div class="image-container">
+						<div class="blog-card flex-parent">
+							<div class="image-container flex-container">
 								<img src="assets/images/activity-autumn-blond-1374545.jpg">
 							</div>
-							<div class="blog-content">
+							<div class="blog-content flex-container">
 								<h1>Title of the Blog Post</h1>
 								<p>created by August Rising<br>Jan/05/2019</p>
 
