Updated HTML validation

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<title>Personal Website</title>  <!-- Update to unique and accurate page title -->
 		
@@ -53,7 +53,7 @@
 			<div class="flex-parent about-container">
 				<div class="flex-container">
 					<div class="image-container">
-						<img src="assets/images/pexels-photo-1310522.jpeg" /> <!-- Must be square -->
+						<img src="assets/images/pexels-photo-1310522.jpeg" alt="August Rising"/> <!-- Must be square -->
 					</div>
 				</div>
 				<div class="flex-container summary-container">
@@ -74,7 +74,7 @@
 					<div class="flex-container card-container">
 						<div class="blog-card flex-parent">
 							<div class="image-container flex-container">
-								<img src="assets/images/activity-autumn-blond-1374545.jpg">
+								<img src="assets/images/activity-autumn-blond-1374545.jpg" alt="Blog Image">
 							</div>
 							<div class="blog-content flex-container">
 								<h1>Title of the Blog Post</h1>
@@ -90,7 +90,7 @@
 					<div class="flex-container card-container">
 						<div class="blog-card flex-parent">
 							<div class="image-container flex-container">
-								<img src="assets/images/activity-autumn-blond-1374545.jpg">
+								<img src="assets/images/activity-autumn-blond-1374545.jpg" alt="Blog Image">
 							</div>
 							<div class="blog-content flex-container">
 								<h1>Title of the Blog Post</h1>
@@ -105,7 +105,7 @@
 					<div class="flex-container card-container">
 						<div class="blog-card flex-parent">
 							<div class="image-container flex-container">
-								<img src="assets/images/activity-autumn-blond-1374545.jpg">
+								<img src="assets/images/activity-autumn-blond-1374545.jpg" alt="Blog Image">
 							</div>
 							<div class="blog-content flex-container">
 								<h1>Title of the Blog Post</h1>
@@ -129,17 +129,17 @@
 				<form class="contact-form flex-parent">
 					<div class="flex-parent">
 						<div class="form-field flex-container">
-							<input type="text" name="name" placeholder=" " required/>
+							<input type="text" name="name" id="name" placeholder=" " required/>
 							<label for="name">Name</label>
 						</div>
 						<div class="form-field flex-container">
-							<input type="email" name="email"  placeholder=" " required/>
+							<input type="email" name="email" id="email" placeholder=" " required/>
 							<label for="email">E-mail</label>
 						</div>
 					</div>
 					<div class="flex-parent">
 						<div class="form-field col-100 flex-container">				
-							<input type="text" name="message"   placeholder=" " required/>
+							<input type="text" name="message" id="message"  placeholder=" " required/>
 							<label for="message">Message</label>
 						</div>
 					</div>
@@ -156,9 +156,9 @@
 			
 			<div class="footer-container">
 				<footer class="flex-parent">
-					<p>Copyright © 2019 • Designed and Developed by SHARF</p>
+					<h6>Copyright © 2019 • Designed and Developed by SHARF</h6>
 					<div class="icons-container flex-container flex-parent">
-						<p>Connect with me: </p>
+						<h6>Connect with me: </h6>
 						<a href="#"><i class="fas fa-envelope" aria-hidden="true"></i></a>
 						<a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a>
 						<a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a>
