--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta charset="utf-8">
 		<title>Personal Website</title>  <!-- Update to unique and accurate page title -->
 		
 		<meta name="description=" content="Personal website"> <!-- Give summary of the website -->
