--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
-<!DOCTYPE html>
+<!DOCTYPE text/html>
 <html lang="en">
 	<head>
+		<!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' *.mycdn.com 'unsafe-inline';"> -->
+
 		<meta charset="utf-8">
 		<title>Personal Website</title>  <!-- Update to unique and accurate page title -->
 		
 		<meta name="description=" content="Personal website"> <!-- Give summary of the website -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+	<link rel="apple-touch-icon" href="#"/>
 		<!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"> -->
 
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
