--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
 		
 		<meta name="description=" content="Personal website"> <!-- Give summary of the website -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="apple-touch-icon" href="#"/>
-		<!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"> -->
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-		<script src="assets/js/script.js"></script>
+		
 	</head>
 
 	<body>
